# In pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplagiarize"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "An AST-based code similarity detector for Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "zss>=1.2.0",
]

[project.scripts]
pyplagiarize = "src.main:app"